# rust-csv-to-cloudcompare-sbf

./: .gitignore  Cargo.toml  README.md
data/: example.csv
src/: main.rs
