[package]
name = "sbf"
description = "Convert a point cloud from CSV to SBF (simple binary file) format."
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
indicatif = "0.17.9"
serde = { version = "1.0.216", features = ["derive"] }
